[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/INVENTORY/ShopMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ENTITIES/Merchant.gd" type="Script" id=2]
[ext_resource path="res://textures/NPC/Merchant/Merchant_Idle_1.png" type="Texture" id=3]
[ext_resource path="res://textures/NPC/Merchant/Merchant_Idle_4.png" type="Texture" id=4]
[ext_resource path="res://textures/NPC/Merchant/Merchant_Idle_2.png" type="Texture" id=5]
[ext_resource path="res://textures/NPC/Merchant/Merchant_Idle_3.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 2 )

[node name="Merchant" type="KinematicBody2D"]
z_index = 3
collision_layer = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 1 )
frame = 1
speed_scale = 1.25
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="top_wall" type="RayCast2D" parent="."]
visible = false
position = Vector2( 4, 4 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 18 )

[node name="top_wall2" type="RayCast2D" parent="."]
visible = false
position = Vector2( -4, 4 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 18 )

[node name="bottom_wall" type="RayCast2D" parent="."]
visible = false
position = Vector2( -4, 4 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="bottom_wall2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 4, 4 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="movement_timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ShopMenu" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 65536
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -7, 8, 6, 8, 6, -9, -7, -9 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2"]
polygon = PoolVector2Array( 0, 40, -32, 32, -40, 0, -40, -24, 40, -24, 40, 0, 32, 32 )

[node name="restock_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = -20.3419
margin_top = -27.658
margin_right = 19.6581
margin_bottom = -13.658
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="movement_timer" to="." method="_on_movement_timer_timeout"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_Area2D2_area_exited"]
[connection signal="timeout" from="restock_timer" to="." method="_on_restock_timer_timeout"]
